--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,20 @@
 npx create-expo-app BuyNow --template
+yarn add @react-navigation/native @react-navigation/native-stack @react-navigation/bottom-tabs
+yarn add @reduxjs/toolkit react-redux axios
+yarn add @react-native-async-storage/async-storage
+yarn add react-native-reanimated react-native-gesture-handler
+
+
+npm install --save-dev typescript @types/react @types/react-native
+
+npm install @react-navigation/native @react-navigation/native-stack
+npm install react-native-screens react-native-safe-area-context
+npm install axios
+npm install @reduxjs/toolkit react-redux
+
+npm install @reduxjs/toolkit react-redux axios @react-native-async-storage/async-storage
+
+
+
+npm i expo-constants
+npm install @expo/vector-icons
