--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
@@ -20,6 +21,10 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-notificated": "^0.1.7",
+    "react-native-paper": "^5.14.5",
+    "react-native-toast-message": "^2.3.3",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
