--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^1.11.0",
     "expo": "~53.0.22",
     "expo-constants": "^17.1.7",
+    "expo-dev-client": "^5.2.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-notificated": "^0.1.7",
     "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~3.17.4",
     "react-native-toast-message": "^2.3.3",
     "react-redux": "^9.2.0"
   },
